WIP rename coordinator gateway IP fields
